fixing alignment issues with responsiveness for main divs on home page

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -9,7 +9,8 @@ body {
     color: black;
 }
 .carouselCont {
-    width: 100%;
+    width: 98%;
+    margin: auto;
     background-color: #DFFCFD;
     transform: rotate(2deg);
 }
@@ -113,7 +114,8 @@ a{
 }
 .mainCont {
     position: relative;
-    width: 100%;
+    margin: auto;
+    width: 99%;
     background-color: #92FBFC;
     transform: rotate(-2deg);
     padding: 30px;
@@ -212,17 +214,23 @@ td {
     }
 
 }
-@media screen and (min-width:500px) and (max-width:940px) {
+@media screen and (min-width:445px) and (max-width:940px) {
     #me {
         padding-bottom: 0px;
     }
     .container {
         width: 85%;
     }
+    .mainCont, .carouselCont {
+        width: 96%;
+    }
+    #carouselCaptions {
+        width: 80%;
+    }
 }
 @media screen and (max-width:425px) {
     .heading {
-        margin-left: 0;
+        margin-left: 10px;
     }
     .container, .container2 {
         clear: both;
@@ -232,12 +240,12 @@ td {
     .container {
         width: 90%;
     }
-    .contact-me {
-        display: inline-block;
-        text-align: left;
-        margin: 15px auto 0px;
-        padding-bottom: 0px;
-    }   
+    .mainCont, .carouselCont {
+        width: 96%;
+    }
+    #carouselCaptions {
+        width: 80%;
+    } 
     .projects {
         height: 150px;
         width: 150px;
